added UniversityForm with servlets

--- a/education/src/main/webapp/WEB-INF/UniversityViews/universityAdded.html
+++ b/education/src/main/webapp/WEB-INF/UniversityViews/universityAdded.html
@@ -8,7 +8,7 @@
 <body>
 <p>
     University has been added successfully.
-    <a href="UniversityServlet?action=listOfUniversities">Continue</a>
+    <a href="/listOfUniversities">Continue</a>
 </p>
 </body>
 </html>
