--- a/education/src/main/webapp/WEB-INF/UniversityViews/universityUpdated.html
+++ b/education/src/main/webapp/WEB-INF/UniversityViews/universityUpdated.html
@@ -8,7 +8,7 @@
 <body>
 <p>
     University has been updated successfully.
-    <a href="UniversityServlet?action=listOfUniversities">ok. Continue</a>
+    <a href="/listOfUniversities">ok. Continue</a>
 </p>
 </body>
 </html>
