--- a/education/src/main/webapp/WEB-INF/UniversityViews/universityDeleted.html
+++ b/education/src/main/webapp/WEB-INF/UniversityViews/universityDeleted.html
@@ -8,7 +8,7 @@
 <body>
 <p>
     University has been successfully deleted.
-    <a href="/listOfUniversities">Ok. Continue</a>
+    <a href="/listOfUniversities">Continue</a>
 </p>
 </body>
 </html>
