add controller package and make index.html as a start page

--- a/autosalon/src/main/webapp/index.html
+++ b/autosalon/src/main/webapp/index.html
@@ -20,7 +20,7 @@
         </tr>
     </table>
     <br>
-    <a href="${pageContext.request.contextPath}/index.html">GO TO SPRING MVC MAIN PAGE</a>
+    <a href="${pageContext.request.contextPath}/index.html">GO TO SERVLET MAIN PAGE</a>
 </div>
 </body>
 </html>
