--- a/education/src/main/webapp/index.html
+++ b/education/src/main/webapp/index.html
@@ -20,6 +20,12 @@
             <ul class="nav navbar-nav">
                 <li><a href="/createUniversity">New University</a></li>
                 <li><a href="/listOfUniversities">All Universities</a></li>
+                <li>
+                    <a href="/subjectList">Subject List</a>
+                </li>
+                <li>
+                    <a href="/createSubject">Create Subject</a>
+                </li>
             </ul>
         </div>
     </div>
